--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^5.1.0
   fluttertoast: ^8.2.6
   cloud_firestore: ^5.0.1
+  google_sign_in: ^6.2.1
   animated_splash_screen: ^1.3.0
   provider: ^6.1.2
   flutter_localizations:
